pom fixed